# yandex-query-client

./: README.md  pyproject.toml
.github/workflows/: python-app.yml  python-package-test.yml  python-publish.yml
src/yandex_query_client/: __init__.py  http_client.py  query_results.py
tests/: __init__.py  test_http_client.py  test_query_results.py
